<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlackBox</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed App</string>
    <string name="installed_module">Installed Module</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="xp_setting">Xposed Setting</string>
    <string name="tg_group">Telegram Group</string>
    <string name="fake_location">Fake Location(Preview)</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%s-%s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Setting</string>
    <string name="jump_module">Go to Module Manager</string>
    <string name="module_setting">Module Manager</string>
    <string name="enable_xposed">Enable Xposed Framework</string>
    <string name="hider">Hide</string>
    <string name="hide_root">Hide Root</string>
    <string name="hide_xposed">Hide Xposed</string>
    <string name="userRemark">User Remark</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Setting</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for BlackBox</string>
    <string name="install_success">Installed Successfully</string>
    <string name="install_fail">Installed Failed: %s</string>
    <string name="install_fail_no_msg">Installed Failed</string>
    <string name="uninstall_success">Uninstalled Successfully</string>
    <string name="uninstall_fail">Uninstalled Failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="uninstall_module">Uninstall Module</string>
    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="clear_success">Cleared Successfully</string>
    <string name="start_fail">Launched Failed</string>
    <string name="start_in_outside">Start module in outside</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
    <string name="other">Others</string>
    <string name="daemon_enable">Daemon</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>

    <string name="share_host_sdcard" translatable="false">Share host storage (/sdcard)</string>
    <string name="share_host_sdcard_summary" translatable="false">Map virtual apps /sdcard to the real host /sdcard instead of the virtual external folder (requires All files access on Android 11+).</string>
    <string name="grant_all_files_access" translatable="false">Grant All files access</string>
    <string name="grant_all_files_access_summary" translatable="false">Open the system settings page to grant this app "All files access" so virtual apps can read/write the host storage.</string>


    <string name="instances" translatable="false">Instances</string>

    <string name="instance_incompatible" translatable="false">Incompatible instance</string>

    <string name="restore_instance_confirm" translatable="false">Restore this instance?</string>
    <string name="instance_restored" translatable="false">Instance restored</string>

    <string name="delete_instance" translatable="false">Delete instance</string>
    <string name="delete_instance_confirm" translatable="false">Delete this instance?</string>
    <string name="deleted" translatable="false">Deleted</string>
    <string name="delete_failed" translatable="false">Delete failed</string>

    <string name="instance_name_hint" translatable="false">Instance name</string>
    <string name="instance_saved" translatable="false">Instance saved</string>

    <string name="workspace_not_set_instances" translatable="false">Workspace folder not set. Please set it first.</string>

    <string name="invalid_folder" translatable="false">Invalid folder</string>
    <string name="folder_name" translatable="false">Folder name</string>
    <string name="create_folder" translatable="false">Create folder</string>
    <string name="select_this_folder" translatable="false">Select this folder</string>
    <string name="storage" translatable="false">Storage</string>
    <string name="workspace_folder" translatable="false">Workspace folder</string>
    <string name="workspace_folder_summary" translatable="false">Choose the folder used as the workspace</string>


    <string name="restore_instance" translatable="false">Restore Instance</string>
    <string name="backup_instance_summary" translatable="false">Enter a name and create an instance ZIP</string>
    <string name="restore_instance_summary" translatable="false">Choose an instance ZIP and restore</string>

    <string name="backup_instance" translatable="false">Backup Instance</string>
    <string name="instance_backup_name_hint" translatable="false">Enter backup name</string>
    <string name="instance_backup_name_required" translatable="false">Please enter a backup name</string>
    <string name="instance_backup_in_progress" translatable="false">Backing up…</string>
    <string name="instance_backup_done" translatable="false">Backed Up!</string>
    <string name="instance_backup_failed" translatable="false">Backup failed: %1$s</string>
    <string name="instance_backup_done_path" translatable="false">Backed Up! %1$s</string>

</resources>
