<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/xp_setting">

        <SwitchPreferenceCompat
                app:key="xp_enable"
                app:title="@string/enable_xposed" />

        <Preference
                android:dependency="xp_enable"
                app:key="xp_module"
                app:summary="@string/jump_module"
                app:title="@string/module_setting" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <SwitchPreferenceCompat
                app:key="share_host_sdcard"
                app:title="@string/share_host_sdcard"
                app:summary="@string/share_host_sdcard_summary" />

        <Preference
                android:key="grant_all_files_access"
                android:title="@string/grant_all_files_access"
                android:summary="@string/grant_all_files_access_summary" />

        <Preference
                android:key="gms_manager"
                android:title="@string/gms_manager"
                android:summary="@string/jump_gms"/>

        <SwitchPreferenceCompat
                app:key="xp_hide"
                app:title="@string/hide_xposed" />

        <SwitchPreferenceCompat
                app:key="root_hide"
                app:title="@string/hide_root" />

        <SwitchPreferenceCompat
                app:key="daemon_enable"
                app:title="@string/daemon_enable" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage">

        <Preference
            android:key="workspace_folder"
            android:title="@string/workspace_folder"
            android:summary="@string/workspace_folder_summary" />

        <Preference
            android:key="backup_instance"
            android:title="Backup Instance" />

        <Preference
            android:key="restore_instance"
            android:title="Restore Instance" />

    </PreferenceCategory>

</PreferenceScreen>